# precision-squad

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  VISION.md  debug_baseline.py  debug_provisional.py  debug_provisional2.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  task-request.yml
.github/workflows/: ci.yml  pr-requires-issue.yml
.opencode/: .gitignore
.opencode/commands/: repair-issue.md
.opencode/plans/: issue-56.md  split-repair-module.md
docs/: architecture.md  graphify-gap-report.md  implementation-plan.md  operator-skill.md  project-status-report.md  staged-command-surface.md
docs/adr/: adr-001-governance-two-verdicts.md  adr-002-SUPERSEDED.md  adr-002-llm-abstraction.md  adr-005-tool-backed-repair-agent-adapters.md  adr-008-resolve-implement-and-review-impl-stage-semantics.md  adr-009-fsm-workflow-controller.md  adr-010-claude-md-migration.md  adr-011-github-transport-and-credential-supply.md
docs/archive/: PRECISION_SQUAD_HANDOFF.md  (+4 more)
instructions/: github-transport.md  governance.md  scope.md  vocabulary.md  workflow.md
tests/: test_adapter.py  test_cli.py  test_config.py  test_coordinator.py  test_docs_policy.py  test_docs_remediation.py  test_env.py  test_executor.py  test_github_client.py  test_github_transport.py  test_governance.py  test_intake.py  test_llm_adapter.py  test_post_publish_review.py  test_publish_executor.py  test_publishing.py  test_repair_rerun.py  test_rerun_context.py  test_retry.py  test_run_store.py  test_stage_contracts.py
(+78 files in other folders)
